kp | Robosho terraform | s3 backend correction code

--- a/filebeat/filebeat.yaml
+++ b/filebeat/filebeat.yaml
@@ -228,3 +228,6 @@ resources: { }
 secretMounts: []
 tolerations: []
 labels: { }
+
+## helm repo add elastic https://helm.elastic.co
+## helm install filebeat elastic/filebeat -f filebeat.yml
